qt6/gen_qgraphicsscene.h

typedef struct QBrush QBrush;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QGraphicsLineItem QGraphicsLineItem;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsPixmapItem QGraphicsPixmapItem;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsSimpleTextItem QGraphicsSimpleTextItem;
typedef struct QGraphicsTextItem QGraphicsTextItem;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QLineF QLineF;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPalette QPalette;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QStyle QStyle;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QGraphicsScene* QGraphicsScene_new();
QGraphicsScene* QGraphicsScene_new2(QRectF* sceneRect);
QGraphicsScene* QGraphicsScene_new3(double x, double y, double width, double height);
QGraphicsScene* QGraphicsScene_new4(QObject* parent);
QGraphicsScene* QGraphicsScene_new5(QRectF* sceneRect, QObject* parent);
QGraphicsScene* QGraphicsScene_new6(double x, double y, double width, double height, QObject* parent);
QMetaObject* QGraphicsScene_metaObject(const QGraphicsScene* self);
void* QGraphicsScene_metacast(QGraphicsScene* self, const char* param1);
int QGraphicsScene_metacall(QGraphicsScene* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsScene_tr(const char* s);
QRectF* QGraphicsScene_sceneRect(const QGraphicsScene* self);
double QGraphicsScene_width(const QGraphicsScene* self);
double QGraphicsScene_height(const QGraphicsScene* self);
void QGraphicsScene_setSceneRect(QGraphicsScene* self, QRectF* rect);
void QGraphicsScene_setSceneRect2(QGraphicsScene* self, double x, double y, double w, double h);
void QGraphicsScene_render(QGraphicsScene* self, QPainter* painter);
int QGraphicsScene_itemIndexMethod(const QGraphicsScene* self);
void QGraphicsScene_setItemIndexMethod(QGraphicsScene* self, int method);
int QGraphicsScene_bspTreeDepth(const QGraphicsScene* self);
void QGraphicsScene_setBspTreeDepth(QGraphicsScene* self, int depth);
QRectF* QGraphicsScene_itemsBoundingRect(const QGraphicsScene* self);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items(const QGraphicsScene* self);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_itemsWithPos(const QGraphicsScene* self, QPointF* pos);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_itemsWithRect(const QGraphicsScene* self, QRectF* rect);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_itemsWithPath(const QGraphicsScene* self, QPainterPath* path);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items2(const QGraphicsScene* self, double x, double y, double w, double h, int mode, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_collidingItems(const QGraphicsScene* self, QGraphicsItem* item);
QGraphicsItem* QGraphicsScene_itemAt(const QGraphicsScene* self, QPointF* pos, QTransform* deviceTransform);
QGraphicsItem* QGraphicsScene_itemAt2(const QGraphicsScene* self, double x, double y, QTransform* deviceTransform);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_selectedItems(const QGraphicsScene* self);
QPainterPath* QGraphicsScene_selectionArea(const QGraphicsScene* self);
void QGraphicsScene_setSelectionArea(QGraphicsScene* self, QPainterPath* path, QTransform* deviceTransform);
void QGraphicsScene_setSelectionAreaWithPath(QGraphicsScene* self, QPainterPath* path);
QGraphicsItemGroup* QGraphicsScene_createItemGroup(QGraphicsScene* self, struct miqt_array /* of QGraphicsItem* */  items);
void QGraphicsScene_destroyItemGroup(QGraphicsScene* self, QGraphicsItemGroup* group);
void QGraphicsScene_addItem(QGraphicsScene* self, QGraphicsItem* item);
QGraphicsEllipseItem* QGraphicsScene_addEllipse(QGraphicsScene* self, QRectF* rect);
QGraphicsLineItem* QGraphicsScene_addLine(QGraphicsScene* self, QLineF* line);
QGraphicsPathItem* QGraphicsScene_addPath(QGraphicsScene* self, QPainterPath* path);
QGraphicsPixmapItem* QGraphicsScene_addPixmap(QGraphicsScene* self, QPixmap* pixmap);
QGraphicsRectItem* QGraphicsScene_addRect(QGraphicsScene* self, QRectF* rect);
QGraphicsTextItem* QGraphicsScene_addText(QGraphicsScene* self, struct miqt_string text);
QGraphicsSimpleTextItem* QGraphicsScene_addSimpleText(QGraphicsScene* self, struct miqt_string text);
QGraphicsProxyWidget* QGraphicsScene_addWidget(QGraphicsScene* self, QWidget* widget);
QGraphicsEllipseItem* QGraphicsScene_addEllipse2(QGraphicsScene* self, double x, double y, double w, double h);
QGraphicsLineItem* QGraphicsScene_addLine2(QGraphicsScene* self, double x1, double y1, double x2, double y2);
QGraphicsRectItem* QGraphicsScene_addRect2(QGraphicsScene* self, double x, double y, double w, double h);
void QGraphicsScene_removeItem(QGraphicsScene* self, QGraphicsItem* item);
QGraphicsItem* QGraphicsScene_focusItem(const QGraphicsScene* self);
void QGraphicsScene_setFocusItem(QGraphicsScene* self, QGraphicsItem* item);
bool QGraphicsScene_hasFocus(const QGraphicsScene* self);
void QGraphicsScene_setFocus(QGraphicsScene* self);
void QGraphicsScene_clearFocus(QGraphicsScene* self);
void QGraphicsScene_setStickyFocus(QGraphicsScene* self, bool enabled);
bool QGraphicsScene_stickyFocus(const QGraphicsScene* self);
QGraphicsItem* QGraphicsScene_mouseGrabberItem(const QGraphicsScene* self);
QBrush* QGraphicsScene_backgroundBrush(const QGraphicsScene* self);
void QGraphicsScene_setBackgroundBrush(QGraphicsScene* self, QBrush* brush);
QBrush* QGraphicsScene_foregroundBrush(const QGraphicsScene* self);
void QGraphicsScene_setForegroundBrush(QGraphicsScene* self, QBrush* brush);
QVariant* QGraphicsScene_inputMethodQuery(const QGraphicsScene* self, int query);
struct miqt_array /* of QGraphicsView* */  QGraphicsScene_views(const QGraphicsScene* self);
void QGraphicsScene_update(QGraphicsScene* self, double x, double y, double w, double h);
void QGraphicsScene_invalidate(QGraphicsScene* self, double x, double y, double w, double h);
QStyle* QGraphicsScene_style(const QGraphicsScene* self);
void QGraphicsScene_setStyle(QGraphicsScene* self, QStyle* style);
QFont* QGraphicsScene_font(const QGraphicsScene* self);
void QGraphicsScene_setFont(QGraphicsScene* self, QFont* font);
QPalette* QGraphicsScene_palette(const QGraphicsScene* self);
void QGraphicsScene_setPalette(QGraphicsScene* self, QPalette* palette);
bool QGraphicsScene_isActive(const QGraphicsScene* self);
QGraphicsItem* QGraphicsScene_activePanel(const QGraphicsScene* self);
void QGraphicsScene_setActivePanel(QGraphicsScene* self, QGraphicsItem* item);
QGraphicsWidget* QGraphicsScene_activeWindow(const QGraphicsScene* self);
void QGraphicsScene_setActiveWindow(QGraphicsScene* self, QGraphicsWidget* widget);
bool QGraphicsScene_sendEvent(QGraphicsScene* self, QGraphicsItem* item, QEvent* event);
double QGraphicsScene_minimumRenderSize(const QGraphicsScene* self);
void QGraphicsScene_setMinimumRenderSize(QGraphicsScene* self, double minSize);
bool QGraphicsScene_focusOnTouch(const QGraphicsScene* self);
void QGraphicsScene_setFocusOnTouch(QGraphicsScene* self, bool enabled);
void QGraphicsScene_update2(QGraphicsScene* self);
void QGraphicsScene_invalidate2(QGraphicsScene* self);
void QGraphicsScene_advance(QGraphicsScene* self);
void QGraphicsScene_clearSelection(QGraphicsScene* self);
void QGraphicsScene_clear(QGraphicsScene* self);
void QGraphicsScene_changed(QGraphicsScene* self, struct miqt_array /* of QRectF* */  region);
void QGraphicsScene_connect_changed(QGraphicsScene* self, intptr_t slot);
void QGraphicsScene_sceneRectChanged(QGraphicsScene* self, QRectF* rect);
void QGraphicsScene_connect_sceneRectChanged(QGraphicsScene* self, intptr_t slot);
void QGraphicsScene_selectionChanged(QGraphicsScene* self);
void QGraphicsScene_connect_selectionChanged(QGraphicsScene* self, intptr_t slot);
void QGraphicsScene_focusItemChanged(QGraphicsScene* self, QGraphicsItem* newFocus, QGraphicsItem* oldFocus, int reason);
void QGraphicsScene_connect_focusItemChanged(QGraphicsScene* self, intptr_t slot);
struct miqt_string QGraphicsScene_tr2(const char* s, const char* c);
struct miqt_string QGraphicsScene_tr3(const char* s, const char* c, int n);
void QGraphicsScene_render2(QGraphicsScene* self, QPainter* painter, QRectF* target);
void QGraphicsScene_render3(QGraphicsScene* self, QPainter* painter, QRectF* target, QRectF* source);
void QGraphicsScene_render4(QGraphicsScene* self, QPainter* painter, QRectF* target, QRectF* source, int aspectRatioMode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items1(const QGraphicsScene* self, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items22(const QGraphicsScene* self, QPointF* pos, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items3(const QGraphicsScene* self, QPointF* pos, int mode, int order);
struct miqt_array /* of QGraphicsItem* */  QGraphicsScene_items4(const QGraphicsScene* self, QPointF* pos, int mode, int order, QTransform* deviceTransform);